--- a/pages/capitulos.html
+++ b/pages/capitulos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <title>Capítulos - Kimetsu no Yaiba</title>
 </head>
-<body class="home-page-capitulos">
+<body class="capitulos-page-body">
 
     <header class="main-header">
         <div class="header-content">
