--- a/index.html
+++ b/index.html
@@ -4,42 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kimetsu no Yaiba</title>
-    <link rel="stylesheet" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body class="home-page-index">
 
-    <header class="main-header">
-        <div class="header-content">
+<header class="main-header">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgba(0, 0, 0, 0.9);">
+        <div class="container-fluid">
+            
+            <a class="navbar-brand" href="./index.html" aria-label="Ir a la página de inicio">
+                <img src="../assets/img/logo-kimetsu-2.jpg" alt="Logo de Kimetsu no Yaiba" style="height: 50px;">
+            </a>
 
-            <h1 class="site-title">
-                <a href="./index.html" aria-label="Ir a la página de inicio">
-                    <img src="../assets/img/logo-kimetsu-2.jpg" alt="Logo de Kimetsu no Yaiba">
-                </a>
-            </h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <nav class="main-nav" aria-label="Navegación principal del sitio">
-                <ul>
-                    <li>
-                        <a href="./index.html">Inicio</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                     </li>
-                    <li>
-                        <a href="./pages/capitulos.html">Capítulos</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/capitulos.html">Capítulos</a>
                     </li>
-                    <li>
-                        <a href="./pages/personajes.html">Personajes</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/personajes.html">Personajes</a>
                     </li>
-                    <li>
-                        <a href="./pages/historia.html">Historia</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/historia.html">Historia</a>
                     </li>
-                    <li>
-                        <a href="./pages/contacto.html">Contacto</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
         </div>
-    </header>
+    </nav>
+</header>
 
     <main id="main-content">
         <div class="audio-player">
@@ -88,5 +93,6 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
