--- a/pages/historia.html
+++ b/pages/historia.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <title>HIstoria - Kimetsu no Yaiba</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="historia-page-body">
 
@@ -123,5 +124,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
