--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             
             <a class="navbar-brand" href="./index.html" aria-label="Ir a la página de inicio">
-                <img src="../assets/img/logo-kimetsu-2.jpg" alt="Logo de Kimetsu no Yaiba" style="height: 50px;">
+                <img src="./assets/img/logo-kimetsu-2.jpg" alt="Logo de Kimetsu no Yaiba" style="height: 50px;">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
