Refactor audio player section in index.html
se corrige audio dentro de index para poder tener un código limpio

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
     </header>
 
     <main id="main-content">
-        <div class="audio-player">
-            <p>Escucha el Opening:</p>
-            <audio controls loop autoplay>
-                <source src="./assets/audio/Gurenge.mp3" type="audio/mpeg">
-                Tu navegador no soporta el elemento de audio.
-            </audio>
-        </div>
+
         <section class="media-container">
+            <div class="audio-player">
+                <p>Escucha el Opening:</p>
+                <audio controls loop>
+                    <source src="./assets/audio/Gurenge.mp3" type="audio/mpeg">
+                Tu navegador no soporta el elemento de audio.
+                </audio>
+            </div>
             <h2>Tráiler Oficial</h2>
             <div class="iframe-wrapper">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/T3KjEoGkLWE?si=S68Sk1AirWsVKooR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
