--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
     <title>Kimetsu no Yaiba</title>
 </head>
@@ -72,26 +73,29 @@
             <h3>Síguenos</h3>
             <ul>
                 <li>
-                    <a href="https://www3.animeflv.net/anime/kimetsu-no-yaiba" target="_blank" rel="noopener noreferrer">Animeflv</a>
+                    <a href="URL-CAZORLALINKEDIN" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Cazorla Studio">
+                        <i class="fab fa-linkedin"></i> 
+                    </a>
                 </li>
                 <li>
                     <a href="URL-CAZORLAIG" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Cazorla Studio">
-                        <span class="icon-instagram" aria-hidden="true"></span> Instagram
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </li>
                 <li>
                     <a href="URL-CAZORLAFACEBOOK" target="_blank" rel="noopener noreferrer" aria-label="Facebook de Cazorla Studio">
-                        <span class="icon-facebook" aria-hidden="true"></span> Facebook
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
                 <li>
                     <a href="URL-CAZORLAX" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter) de Cazorla Studio">
-                        <span class="icon-x" aria-hidden="true"></span> X
+                        <i class="fab fa-x-twitter"></i> 
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
