se corrige footer en todas las pages

--- a/index.html
+++ b/index.html
@@ -67,13 +67,17 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>&copy; 2025 Cazorla Studio. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Cazorla Studio. Página sin fines de lucro.</p>
             <p>Contacto: martincazorlasota@gmail.com</p>
         </div>
 
         <div class="social-links">
             <h3>Síguenos</h3>
             <ul>
+                <li>
+                    <a href="https://www3.animeflv.net/anime/kimetsu-no-yaiba" target="_blank" rel="noopener noreferrer">Animeflv</a>
+                </li>
+                <li>
                 <li>
                     <a href="URL-CAZORLALINKEDIN" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Cazorla Studio">
                         <i class="fab fa-linkedin"></i> 
