--- a/pages/historia.html
+++ b/pages/historia.html
@@ -102,7 +102,7 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>&copy; 2025 Cazorla Studio. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Cazorla Studio. Página sin fines de lucro.</p>
             <p>Contacto: martincazorlasota@gmail.com</p>
         </div>
 
