--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/style.css"> 
 </head>
+
 <body class="personajes-page-body">
 
     <header class="main-header">
@@ -320,17 +322,17 @@
                     <a href="https://www3.animeflv.net/anime/kimetsu-no-yaiba" target="_blank" rel="noopener noreferrer">Animeflv</a>
                 </li>
                 <li>
-                    <a href="URL-CAZORLAIG" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Cazorla Studio">
+                    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Cazorla Studio">
                         <span class="icon-instagram" aria-hidden="true"></span> Instagram
                     </a>
                 </li>
                 <li>
-                    <a href="URL-CAZORLAFACEBOOK" target="_blank" rel="noopener noreferrer" aria-label="Facebook de Cazorla Studio">
+                    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Facebook de Cazorla Studio">
                         <span class="icon-facebook" aria-hidden="true"></span> Facebook
                     </a>
                 </li>
                 <li>
-                    <a href="URL-CAZORLAX" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter) de Cazorla Studio">
+                    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter) de Cazorla Studio">
                         <span class="icon-x" aria-hidden="true"></span> X
                     </a>
                 </li>
